style.css
/* ... */
.slider .swiper-slide-active .title-info h3 {
    transition-delay: .5s;
}

.slider .swiper-slide-active .title-info .button {
    transition-delay: .75s;
}

/* 
    #GUIDE: 
*/
.page-home main>div:not(.slider, .frominsta),
.inner-footer {
    padding: 100px 0;
}

.guide {
    background-color: var(--flashwhite-color);
}

main>div .heading {
    text-align: center;
    margin-bottom: 60px;
}

.guide .dotgrid .wrapper {
    --grid-col: 260px;
}

:is(.guide, .fromblog) .dot-image .thumbnail {
    position: relative;
    opacity: unset;
}

:is(.guide, .fromblog) .dot-image .thumbnail img {
    width: 100%;
}

.guide .dot-title {
    --fs14: 18px;
    --fw600: 400;
    padding: 10px 0;
}

.guide .dot-info p {
    line-height: 1.4;
}

.scrollto .wrapper .item {
    width: 290px;
    scroll-snap-align: start;
    flex-shrink: 0;
}

.guide .scrollto .wrapper::-webkit-scrollbar-thumb {
    --border-color: #f0f9f8;
}

/* 
    #CAROUSEL: 
*/
.carousel .inner-wrapper {
    position: relative;
}

.carousel .dotgrid .wrapper {
    display: flex;
    grid-template-columns: unset;
    gap: unset;
}

.carousel .nav>div::after {
    content: none;
}

.carousel .nav .swiper-button-prev svg.swiper-navigation-icon,
.carousel .nav .swiper-button-next svg.swiper-navigation-icon {
    display: none !important;
}


.carousel .nav>div {
    width: 40px;
    height: 40px;
    line-height: 40px;
    border: 1px solid var(--gray-color);
    border-radius: 50%;
    color: var(--dark-color);
    font-size: 20px;
    -webkit-tap-highlight-color: transparent;
    transition: var(--transition-background), var(--transition-color), var(--transition-border);
}

.carousel .nav>div:hover {
    color: var(--white-color);
    background-color: var(--dark-color);
    border-color: var(--dark-color);
}

.carousel .nav .swiper-button-disabled {
    display: none;
}

/* 
    #BYCATS: 
*/

.bycats .heading {
    display: flex;
    justify-content: center;
    margin-top: 50px;
}

.bycats .heading>span {
    font-family: var(--second-font);
    font-size: 32px;
    margin-right: 20px;
}

.bycats .heading>span,
.opt-trigger {
    height: 44px;
    display: flex;
    align-items: center;
    gap: 15px;
    -webkit-tap-highlight-color: transparent;
    cursor: pointer;
}

.sort-list .wrap {
    position: relative;
}

.sort-list .wrap ul {
    position: absolute;
    text-align: left;
    top: 50px;
    left: 0;
    right: 0;
    background-color: var(--white-color);
    box-shadow: var(--shadow);
    z-index: 10;
    display: none;
    animation: var(--fade);
}

.sort-list .wrap ul.show {
    display: block;
}

.sort-list ul li a {
    display: block;
    padding: 5px 20px;
    transition: var(--transition-background), var(--transition-color);
}

.sort-list ul li a:hover,
.sort-list ul li.active a {
    background-color: var(--dark-color);
    color: var(--white-color);
}

.sort-data,
.data-popup {
    display: none;
    animation: var(--fade);
}

.sort-data.active,
.data-popup.active {
    display: block;
}

/* 
    #BANNER: 
*/

.banner {
    background-color: var(--light-color);
    background-image: url('/assets/banner.png');
    background-size: cover;
    background-repeat: no-repeat;
    background-position-x: right;
    background-origin: border-box;
    margin: 5rem 0;
    padding: 5rem 0;
}

.banner .content {
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: 30px;
}

.banner .content span {
    font-size: var(--fs14);
    text-transform: uppercase;
}

.banner h3 {
    --fs-max: 80px;
}

/* 
    #FROM BLOG: 
*/

.fromblog .dot-title {
    --primary-font: var(var(--second-font));
    --fs14: 18px;
    --fw600: 400;
    margin-top: 15px;
}

.fromblog .dot-info>a {
    display: inline-block;
    font-size: 12px;
    text-transform: uppercase;
    border: 1px solid var(--light-color);
    color: var(--gray-color);
    padding: 1px 10px;
    transition: var(--transition-background), var(--transition-color), var(--transition-border);
    border-radius: 8px;
}

.fromblog .dot-info>a:hover {
    background-color: var(--dark-color);
    border-color: var(--dark-color);
    color: var(--white-color);
}

.fromblog .button {
    text-align: center;
    margin-top: 40px;

}

/* 
    #FROM INESTAGRAM: 
*/

.frominsta .container.wide {
    --mx-width: none;
    --gutter: 0;
}

.frominsta .dotgrid .wrapper {
    background-color: var(--flashwhite-color);
}

.frominsta img {
    width: 100%;
}

.frominsta .dot-image {
    margin: 0;
}

.frominsta .actions {
    font-size: 20px;
    width: 50px;
    height: 50px;
    border-radius: 50%;
    background-color: var(--white-color);
    display: flex;
    align-items: center;
    justify-content: center;
    pointer-events: none;
    margin: 0 auto;
}

/* 
    #FOOTER: 
*/

.inner-footer {
    background-color: var(--flashwhite-color);
    line-height: 1.4;
    padding-bottom: 30px;
}

.inner-footer .wrap>div {
    display: flex;
    flex-flow: wrap;
    justify-content: space-between;
    gap: 60px;
}

.inner-footer .subscribe {
    width: 100%;
}

.inner-footer .top .subscribe h3 {
    margin-bottom: 20px;
}

.inner-footer p {
    font-size: var(--fs14);
}

.inner-footer .search {
    max-width: 400px;
}

.inner-footer .search .input {
    font-size: var(--fs14);
    border: 2px solid var(--dark-color);
}

.inner-footer .bottom, .product-page .carousel, .cart-total .grouping > div {
    padding: 40px 0 60px 0;
}

/* 
    #BREADCRUMB: 
*/

.breadcrumb {
    width: 100%;
    line-height: initial;
    padding: 30px 0 50px;
}

.breadcrumb ul {
    justify-content: center;
}

.breadcrumb ul li {
    position: relative;
    margin-right: 10px;
}

.breadcrumb ul li:not(:first-child) {
    padding-left: 25px;
}
/* ... */

